# Mengled

./: .clang-format  CMakeLists.txt  Concept.md  build.bat
src/: main.cpp  winmain.cpp
src/core/: m_main.cpp  m_main.h
src/editor/: editor.cpp  editor.h  filedialog.cpp  filedialog.h  themes.cpp  themes.h
src/engine/: UUID.cpp  UUID.h  components.h  engine.cpp  engine.h  gui_utilities.cpp  gui_utilities.h  json_serializer.h  resourcemanager.cpp  resourcemanager.h
src/imgui/: ImGui_helpers.h  ImGui_themes.cpp  ImGui_themes.h  ImGui_windowcontrol.cpp  ImGui_windowcontrol.h
src/utils/: filedialog.cpp  logging.cpp  stringconverter.cpp  stringconverter.h
